# Numerical-Approximation-Of-PDEs

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  README.tex.md
include/: ode-euler-exp.hpp  types.hpp
source/: ode-euler-exp.cpp
test/: CMakeLists.txt
test/source/: test-types.cpp
